# SoftServe-Internship_ETL-project

./: .gitignore  Dockerfile  README.md  definitions.py  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
OpenSkyDataExtractor/: all_states.json  all_states.parquet  get_states.py  practice_with_parquet.py
airflow/: Dockerfile  docker-compose.yaml  entrypoint.sh
airflow/dags/: extract_data.py
airflow/data/dags/: extract_data.py
airflow/data/dags/extract_data_helpers/: extract_data.py
airflow_docker/: docker-compose.yaml
airflow_docker/dags/: create_data_extraction_dag.py
configs/: config.py  get_api_user_credentials.py
dags/: create_data_extraction_dag.py
extract/: __init__.py  get_states.py
extract_data_from_OpenSkyApi/: __init__.py  get_states.py
kafka/: consumer.py  docker-compose.yml  get_states_OpenSky.py  producer.py
kafka-docker/get_OpenSky_states/: consumer.py  producer.py
kafka_/: consumer.py  producer.py
kafka_messenger/: consumer.py  data_editor.py  get_states_OpenSky.py  producer.py
pyspark_analysis/: pyspark_tasks.py
test_data_extraction/: divide_for_testing.py  test_config.py  test_data_editor.py  test_division_using_pytest.py  test_ingestion_using_unittest_mock.py
